Updated background color

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 body {
     margin: 0;
     text-align: center;
-    background: #1B244A;
+    background: #0096c7;
     font-family: CTU;
     color: whitesmoke;
 }
